# entercom.v1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Entercom_Technician_Installer_Application_Form_Final.html  Frontend_Audit_Report.md  README.md  Untitled  analyze_ui.py  create_templates.py  docker-compose.yml  find_tables.py  find_ths.py  fix_empty_states.py  fix_imports.py  fix_ts.py  from sklearn.datasets import load_wine.datasets import load_wine.datasets import load_wine  generate.py  generate.txt  generate_tests_impl.py  generate_ui.py  normalize_ui.py  prompt.txt  refactor_api.py  remediate.py  rename_templates.py  report_output.txt  svg.html  unresolved_questions_compiled.md  update_docs.py
backend/: .env.example  check_roles.py  fix.py  fix_tasks_test.py  fix_tasks_test_unique_requests.py  fix_tests.py  fix_tests2.py  fix_tests3.py  manage.py  nixpacks.toml  pyproject.toml  pytest.ini  test_api.py  test_phase_a.py  test_serializer.py  test_users.py
backend/apps/: __init__.py
backend/apps/audit/: constants.py  exceptions.py  models.py  services.py  types.py
backend/apps/audit_logs/: actor_snapshot.py  admin.py  apps.py  context.py  exceptions.py  models.py  permissions.py  (+2 more)
backend/config/: asgi.py  celery.py  routing.py  urls.py
backend/core/: __init__.py  celery_trace.py  drf_exception_handler.py  events.py  exceptions.py  logging.py  permissions.py  trace_context.py
backend/requirements/: base.txt  local.txt  production.txt
backend/services/: __init__.py
backend/templates/: 404.html
backend/tests/: __init__.py
backend/utils/: __init__.py
(+851 files in other folders)
