[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "/migrations/"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["N999"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[project]
requires-python = ">=3.12,<3.13"